--- a/my_venv/website/templates/home.html
+++ b/my_venv/website/templates/home.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>
-            This is the home page.
+            Welcome to the home page.
         </h1>
     </body>
 </html>
