--- a/frontend/react-project/src/index.css
+++ b/frontend/react-project/src/index.css
@@ -6,13 +6,13 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2, h3, .bold {
-  font-family: 'Poppins';
+h1, h2, h3 {
+  font-family: 'Ariel';
 }
 
 .specialBtn {
-  background: white;
-  box-shadow: 0px 14px 55px rgba(96, 165, 255, 0.35);
+  background: rgb(237, 204, 204);
+  box-shadow: 0px 14px 55px rgba(114, 130, 151, 0.35);
   transition-duration: 200ms;
 }
 
